force-app/src/objects/TR1__Team_Member_Credit__c.object
<CustomObject>
    <description>Custom object to track how different Team Members contributed to the delivery of a Job.</description>
    <fields>
        <fullName>TR1__Conversion_Credit__c</fullName>
        <description>Credit for who converted the opportunity to a Live Job</description>
        <inlineHelpText>Credit for who converted the opportunity to a Live Job</inlineHelpText>
        <label>Conversion Credit %</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Credit_Category__c</fullName>
        <description>Specifies a Team Member Credit Category</description>
        <inlineHelpText>Specifies a Team Member Credit Category</inlineHelpText>
        <label>Credit Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Credit_Type__c</fullName>
        <description>Specifies a Credit Type</description>
        <inlineHelpText>Specifies a Credit Type</inlineHelpText>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Date_From__c</fullName>
        <description>Start date of the Credit</description>
        <inlineHelpText>Start date of the Credit</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Date_To__c</fullName>
        <description>End date of the Credit</description>
        <inlineHelpText>End date of the Credit</inlineHelpText>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Execution_Credit__c</fullName>
        <description>Credit for who delivered the Job to success</description>
        <inlineHelpText>Credit for who delivered the Job to success</inlineHelpText>
        <label>Execution Credit %</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <description>The master Job record</description>
        <inlineHelpText>The master Job record</inlineHelpText>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Team Member Credits</relationshipLabel>
        <relationshipName>Team_Member_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Origination_Credit__c</fullName>
        <description>Credit for who won or found the opportunity</description>
        <inlineHelpText>Credit for who won or found the opportunity</inlineHelpText>
        <label>Origination Credit %</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user for whom the credit allocation should be.</description>
        <inlineHelpText>The user for whom the credit allocation should be.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Member_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Value_Percent__c</fullName>
        <description>The Credit value in percent (%)</description>
        <inlineHelpText>The Credit value in percent (%)</inlineHelpText>
        <label>Value %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Value__c</fullName>
        <description>The Credit value</description>
        <inlineHelpText>The Credit value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Team Member Credit</label>
    <nameField>
        <displayFormat>TMC-{0}</displayFormat>
        <label>Team Member Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Member Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>